--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,8 @@
             <!-- Collapsed navbar code from Materialize.com -->
             <ul class="sidenav" id="mobile-demo">
                 <li>
-                    <p class="center-align">Technostalgia<p></p>
+                    <p class="center-align">Technostalgia</p>
+                    <p></p>
                 </li>
 
                 <!-- Show this links to all visitors to site -->
@@ -79,7 +80,7 @@
             {% block content %} {% endblock %}
 
             <!-- Code from https://www.w3schools.com/ -->
-            <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn-large waves-effect waves-light purple lighten-1 ">Back to top<i class="large material-icons">arrow_drop_up</i></button>
+            <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn-large waves-effect waves-light purple lighten-1">Back to top<i class="large material-icons">arrow_drop_up</i></button>
         </main>
 
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
