Align card info on manage site to left

--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -74,7 +74,7 @@
     </div>
 
     {% for technology in technologies %}
-    <div class="card horizontal">
+    <div class="card horizontal left-align">
       <div class="card-stacked">
         <div class="card-content">
           <ul>
@@ -126,7 +126,7 @@
     </div>
 
     {% for comment in comments %}
-    <div class="card horizontal">
+    <div class="card horizontal left-align">
       <div class="card-stacked">
         <div class="card-content">
           <ul>
@@ -166,6 +166,7 @@
       </div>
     </div>
     {% endfor %}
+
   </div>
 </div>
 
