--- a/templates/comments.html
+++ b/templates/comments.html
@@ -6,10 +6,7 @@
     <h1 class="center-align general-title">{{ page_title }}</h1>
   </div>
 
-
-
   <!--technology details-->
-
   <div class="row">
     <div class="col m6">
 
@@ -29,13 +26,10 @@
     </div>
   </div>
 
-
   <div class="row">
 
-
     <!-- Form to add a comment -->
-
-    <div class="col m6 center-align">
+    <div class="col s12 m6 center-align">
       <h2 class="heading comment-sub-heading">Add a comment</h2>
       <div class="row card-panel">
         <form class="col s12" method="POST" action="{{ url_for('add_comment') }}">
@@ -55,6 +49,7 @@
           <!-- Reset Button -->
           <div class="row card-action center-align">
             <div class="col m6">
+
               <!--Submit Button-->
               <button type="submit" class="btn-large waves-effect waves-light purple lighten-1"><i
                   class="material-icons prefix">forward</i>Submit</button>
@@ -69,50 +64,55 @@
       </div>
     </div>
 
+
     <!-- Comments section-->
 
-    <div class="col m6 center-align">
+    <div class="col s12 m6 center-align">
       <h2 class="comment-sub-heading">Read the comments</h2>
 
-
-
       <!-- Comments on this technology -->
-      {% for comment in comments if comment.technology_name == technology.technology_name %}
-      <div class="row left-align">
-        <div class="col s12">
-          <div class="card">
-            <div class="card-content ">
-              <h2 class="card-title comment-sub-heading"><b>Name:</b>{{ comment.technology_name }}</h2>
-              <p><b>Comment:</b>{{ comment.technology_comment }}</p>
-              <p><em>Added by: {{ comment.author|capitalize }}</em></p>
-              <p class="hide-on-small-only"><em>Added on: {{ comment.created_on }}</em></p>
-            </div>
-          </div>
+
+{% if comments|length > 0 %}
+{% for comment in comments %}
+  <div class="row left-align">
+    <div class="col s12">
+      <div class="card">
+        <div class="card-content ">
+          <h2 class="card-title comment-sub-heading"><b>Name:</b>{{ comment.technology_name }}</h2>
+          <p><b>Comment:</b>{{ comment.technology_comment }}</p>
+          <p><em>Added by: {{ comment.author|capitalize }}</em></p>
+          <p class="hide-on-small-only"><em>Added on: {{ comment.created_on }}</em></p>
         </div>
       </div>
     </div>
-    {% else %}
+  </div>
 
-    <!-- If no comments -->
-    <div class="row">
+{% endfor %}
+{% else %}
+
+      <!-- If no comments -->
+      <div class="row">
       <div class="col s12 center-align">
-        <h2 class="comment-sub-heading">No one has added a comment yet - you can be the first!</h2>
-        <button class="btn-large waves-effect waves-light purple lighten-1 tooltipped" data-position="top"
-          data-tooltip="You can add comments from the technology's card"><a class="white-text"
-            href="{{ url_for('get_technologies') }}">Add the first comment<i
-              class="material-icons prefix">add_circle_outline</i></a></button>
+      <h2 class="comment-sub-heading">No one has added a comment yet - you can be the first!</h2>
+      <button class="btn-large waves-effect waves-light purple lighten-1 tooltipped" data-position="top"
+        data-tooltip="You can add comments from the technology's card"><a class="white-text"
+          href="{{ url_for('get_technologies') }}">Add the first comment<i
+            class="material-icons prefix">add_circle_outline</i></a></button>
+      </div>
       </div>
     </div>
+  </div>
+{% endif %}
 
-    {% endfor %}
 
-    <!-- Back to technologies page -->
-    <div class="row">
-      <div class="col s12 center-align">
-        <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light purple lighten-1 ">Go
-          back and
-          browse all the technologies</a>
-      </div>
+
+  <!-- Back to technologies page -->
+  <div class="row">
+    <div class="col s12 center-align">
+      <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light purple lighten-1 ">Go
+        back and
+        browse all the technologies</a>
     </div>
-    </section>
-    {% endblock %}
+  </div>
+  </section>
+  {% endblock %}
